--- a/running /  index.html
+++ b/running /  index.html
@@ -13,18 +13,13 @@
         <h1 style="color: magenta;">Hello</h1>
 
       <h3>I AM HAPPY TO BE HERE .IN MY PROJECT</h3>
-      <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHsi91zgd6hfA/profile-displayphoto-shrink_800_800/0/1614983444635?e=1620259200&v=beta&t=mi0EAnSB-HpEitVM3ZxEz_o-i2SAnfpp8FFEm4haP9g" alt="my picture" width="250px" height="260px" />
+    </div>
 </header>
 <main>
-    <h1 style="color: magenta;">class lab01</h1>
         <div class="content">
-            <p style="color: rgb(12, 10, 14);border: rgb(34, 86, 90);background-color: rgba(148, 135, 136, 0.945);">I am Ayah albarik .my favourite color is black . live in Irbid
-                and it's my favourit goverment , I visited all jordan goverment also find MADABA very beautiful and al ghour like paradise 
-                 ,stydy in ASAC to be softwaredevelopment ,in next project you can ask me what my favourite food .....etc .dont hurry </p>
-      
-      
-          <p style="border: 30px; color: black;background:chocolate;">I visited all jordan goverment also find MADABA very beautiful and al ghour like paradise .you can find all picture on my instgrame </p>  <a href="https://www.instagram.com/ayahbreik/" >my instgrame</a> 
-
+            <p style="color: blueviolet;border: darkred;">I am Ayah albarik .my favourite color is black . live in Irbid ,stydy in ASAC to be softwaredevelopment  </p>
+        </div>
+</div>
 </main>
 <footer>
         <div id="contactUs">
